--- a/Plugin.SpeechDialogs/Plugin.SpeechDialogs.csproj
+++ b/Plugin.SpeechDialogs/Plugin.SpeechDialogs.csproj
@@ -2,13 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Authors>aritchie</Authors>
-        <Company />
+        <Authors>Rémi Brun</Authors>
+        <Company>Appsolu</Company>
         <AssemblyName>Plugin.SpeechDialogs</AssemblyName>
         <RootNamespace>Plugin.SpeechDialogs</RootNamespace>
         <Description>Speech Recognition that allows for continuous dictation, phrases, or quick confirmations.</Description>
         <Product>Plugin.SpeechDialogs</Product>
-        <PackageVersion>1.0.0</PackageVersion>
+        <PackageVersion>1.0.1-appsolu1</PackageVersion>
         <RepositoryUrl>https://github.com/aritchie/speechrecognition</RepositoryUrl>
         <PackageProjectUrl>https://github.com/aritchie/speechrecognition</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/aritchie/speechrecognition/blob/master/LICENSE.md</PackageLicenseUrl>
@@ -22,6 +22,9 @@
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
         <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+        <AssemblyVersion>1.0.1.0</AssemblyVersion>
+        <FileVersion>1.0.1.0</FileVersion>
+        <Version>1.0.1-appsolu1</Version>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
