--- a/Plugin.SpeechRecognition/Plugin.SpeechRecognition.csproj
+++ b/Plugin.SpeechRecognition/Plugin.SpeechRecognition.csproj
@@ -4,8 +4,8 @@
         <!--<TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">netstandard2.0;MonoAndroid80;Xamarin.iOS10;xamarin.TVOS10;uap10.0</TargetFrameworks>-->
         <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">netstandard2.0;MonoAndroid80;Xamarin.iOS10;xamarin.TVOS10</TargetFrameworks>
         <TargetFrameworks Condition=" '$(OS)' != 'Windows_NT' ">netstandard2.0;MonoAndroid80;Xamarin.iOS10;xamarin.TVOS10</TargetFrameworks>
-        <Authors>aritchie</Authors>
-        <Company />
+        <Authors>Rémi Brun</Authors>
+        <Company>Appsolu</Company>
         <AssemblyName>Plugin.SpeechRecognition</AssemblyName>
         <RootNamespace>Plugin.SpeechRecognition</RootNamespace>
         <Description>ACR Speech Recognition Plugin for Xamarin and Windows
@@ -18,7 +18,7 @@ Supported Platforms
 * macOS
 * UWP</Description>
         <Product>$(AssemblyName) ($(TargetFramework))</Product>
-        <PackageVersion>1.0.0</PackageVersion>
+        <PackageVersion>1.0.1-appsolu1</PackageVersion>
         <RepositoryUrl>https://github.com/aritchie/speechrecognition</RepositoryUrl>
         <PackageProjectUrl>https://github.com/aritchie/speechrecognition</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/aritchie/speechrecognition/blob/master/LICENSE.md</PackageLicenseUrl>
@@ -32,6 +32,7 @@ Supported Platforms
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
         <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+        <Version>1.0.1-appsolu1</Version>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
